--- a/quiz-app/quiz-solo/src/assets/main.css
+++ b/quiz-app/quiz-solo/src/assets/main.css
@@ -5,7 +5,8 @@ body {
   font-size: 20px;
   font-family: sans-serif;
   padding-top: 20px;
-  background: #e6ecf1;
+
+  background-image: url("./images/desktop-background.jpg");
 }
 
 .ctr {
@@ -25,7 +26,7 @@ body {
   font-size: 32px;
   font-weight: bold;
   text-align: center;
-  background-color: #00ca8c;
+  background-color: rgb(0, 202, 140, 0.65);
   color: #fff;
   box-sizing: border-box;
 }
@@ -38,7 +39,7 @@ body {
   padding: 20px;
   font-size: 18px;
   width: 100%;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255, 0.65);
   transition: 0.2s linear all;
 }
 .answer span {
@@ -50,12 +51,12 @@ body {
 .progress {
   height: 50px;
   margin-top: 10px;
-  background-color: #ddd;
+  background-color: rgb(221, 221, 221, 0.65);
   position: relative;
 }
 .bar {
   height: 50px;
-  background-color: #ff6372;
+  background-color: rgb(255, 99, 114);
   transition: all 0.3s linear;
 }
 .status {
@@ -70,8 +71,8 @@ body {
   cursor: pointer;
 }
 .answer:not(.is-answered):hover {
-  background-color: #8ce200;
-  border-color: #8ce200;
+  background-color: rgb(140, 226, 0, 0.65);
+  border-color: rgb(140, 226, 0, 0.8);
   color: #fff;
 }
 
@@ -81,7 +82,7 @@ body {
   font-size: 32px;
   font-weight: bold;
   text-align: center;
-  background-color: #12cbc4;
+  background-color: rgb(18, 203, 196, 0.65);
   color: #fff;
   box-sizing: border-box;
 }
@@ -90,7 +91,7 @@ body {
   padding: 20px;
   font-size: 18px;
   width: 100%;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255, 0.65);
   transition: 0.4s linear all;
   text-align: center;
 }
@@ -107,24 +108,29 @@ body {
 }
 .fade-leave-to {
   opacity: 0;
-} 
+}
 
 .reset-btn {
   background-color: #ff6372;
-    border: 0;
-    font-size: 22px;
-    color: #fff;
-    padding: 10px 25px;
-    margin: 10px auto;
-    display: block;
+  border: 0;
+  font-size: 22px;
+  color: #fff;
+  padding: 10px 25px;
+  margin: 10px auto;
+  display: block;
+  transition: 0.2s linear all;
+}
+.reset-btn:hover {
+  background-color: rgb(255, 99, 114, 0.65);
 }
 
-.result{ 
+.result {
   width: 100%;
 }
 
-
-.reset-btn:active, .reset-btn:focus, .reset-btn:hover{
+.reset-btn:active,
+.reset-btn:focus,
+.reset-btn:hover {
   border: 0;
   outline: 0;
 }
