--- a/quiz-app/quiz-solo/src/assets/main.css
+++ b/quiz-app/quiz-solo/src/assets/main.css
@@ -6,9 +6,8 @@ body {
   font-family: sans-serif;
   padding-top: 20px;
 
-  background-image: url("./images/desktop-background.jpg");
+  background-image: url("/images/desktop-background.jpg");
 }
-
 .ctr {
   margin: 0 auto;
   max-width: 600px;
